crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/045.cypher
MATCH (n) RETURN n; CALL apoc.export.csv.all('data.csv', {})
